--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "data-uri-to-buffer": "1",
     "ftp": "~0.3.10",
     "debug": "2",
-    "extend": "3",
+    "extend": "~3.0.2",
     "file-uri-to-path": "1",
     "readable-stream": "2"
   }
